@@ -1,8 +1,8 @@
 Title: Survival analysis, including penalised likelihood.
-Maintainer: Thomas Lumley <tlumley@u.washington.edu>
+Maintainer: Terry Therneau <therneau.terry@mayo.edu>
 Priority: recommended
 Package: survival
-Version: 2.35-5
+Version: 2.35-6
 Date: 2009-08-20
 Depends: stats, utils, graphics, splines, R (>= 2.0.0)
 LazyData: Yes
@@ -14,6 +14,8 @@ Description: survival analysis: descriptive statistics, two-sample
         censoring for parametric models. Case-cohort designs.
 License: GPL-2
 URL: http://r-forge.r-project.org
-Packaged: 2009-08-24 22:28:51 UTC; tlumley
 Repository: CRAN
-Date/Publication: 2009-08-25 08:05:38
+Repository/R-Forge/Project: survival
+Repository/R-Forge/Revision: 11358
+Date/Publication: 2009-09-07 17:10:39
+Packaged: 2009-09-05 20:18:13 UTC; rforge
