@@ -1,5 +1,5 @@
-/*  $Id: coxdetail.c 11080 2008-10-24 03:47:51Z therneau $
-/*
+/*  $Id: coxdetail.c 11357 2009-09-04 15:22:46Z therneau $
+**
 ** Return all of the internal peices of a Cox model
 **
 **  the input parameters are
