@@ -1,0 +1,48 @@
+
+R version 2.10.0 Under development (unstable) (--)
+Copyright (C)  The R Foundation for Statistical Computing
+ISBN 3-900051-07-0
+
+R is free software and comes with ABSOLUTELY NO WARRANTY.
+You are welcome to redistribute it under certain conditions.
+Type 'license()' or 'licence()' for distribution details.
+
+R is a collaborative project with many contributors.
+Type 'contributors()' for more information and
+'citation()' on how to cite R or R packages in publications.
+
+Type 'demo()' for some demos, 'help()' for on-line help, or
+'help.start()' for an HTML browser interface to help.
+Type 'q()' to quit R.
+
+> library(survival)
+Loading required package: splines
+> aeq <- function(x,y) all.equal(as.vector(x), as.vector(y))
+> options(na.action=na.exclude)
+> #
+> # More tests of factors in prediction, using a new data set
+> #
+> fit <- coxph(Surv(time, status) ~  factor(ph.ecog), lung)
+> 
+> tdata <- data.frame(ph.ecog = factor(0:3))
+> p1 <- predict(fit, newdata=tdata, type='lp')
+> p2 <- predict(fit, type='lp')
+> aeq(p1, p2[match(0:3, lung$ph.ecog)])
+[1] TRUE
+> 
+> fit2 <- coxph(Surv(time, status) ~ factor(ph.ecog) + factor(sex), lung)
+> tdata <- expand.grid(ph.ecog = factor(0:3), sex=factor(1:2))
+> p1 <- predict(fit2, newdata=tdata, type='risk')
+> 
+> xdata <- expand.grid(ph.ecog=factor(1:3), sex=factor(1:2))
+> p2 <- predict(fit2, newdata=xdata, type='risk')
+> all.equal(p2, p1[c(2:4, 6:8)], check.attributes=FALSE)
+[1] TRUE
+> 
+> 
+> fit3 <- survreg(Surv(time, status) ~ factor(ph.ecog) + age, lung)
+> tdata <- data.frame(ph.ecog=factor(0:3), age=50)
+> predict(fit, type='lp', newdata=tdata)
+          1           2           3           4 
+-0.39518177 -0.02634168  0.52120527  1.81279848 
+> 
